--- a/style.css
+++ b/style.css
@@ -99,3 +99,28 @@ h2{
     margin-right: 15px;
     align-items: flex-start;
 }
+
+.one{
+    position: absolute;
+    margin-left: -30px;
+    margin-top: 35px;
+    padding-bottom: -500px;
+    width: 40px;
+    height: 40px;
+}
+
+.two{
+    position: absolute;
+    margin-left: -525px;
+   margin-top: 300px;
+    width: 40px;
+    height: 40px;
+}
+
+.three{
+    position: absolute;
+    margin-left: -55px;
+    margin-top: 390px;
+    width: 72px;
+    height: 72px;
+}
