--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@
     transition: 0.5s ease-out;
 
 }
+p{
+    color: rgb(125, 118, 118);
+}
+
 .primary-button:hover{
     background-color: #0e3287;
 }
@@ -89,7 +93,8 @@ ul.sub-header-item li {
     margin-right: 60px; /
 }
 h2{
-    font: bold;
+    font-family: poppins;
+    font-size: 64px;
     color: #000000;
 }
 .banner{
@@ -97,7 +102,7 @@ h2{
 }
 .left-side{
     margin-right: 15px;
-    align-items: flex-start;
+    
 }
 
 .one{
@@ -123,4 +128,12 @@ h2{
     margin-top: 390px;
     width: 72px;
     height: 72px;
+}
+.ul-class{
+  justify-content: space-between;
+  gap: 30px;
+  margin-bottom: -40px;
+}
+.btn-class{
+    margin-top: 90px;
 }
